--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 body {
 	font-family: 'DM Sans', sans-serif;
 }
+
+.section {
+	display: flex;
+	background-color: #f9faff;
+	width: 100%;
+	height: 100vh;
+}
