--- a/src/components/square-info/square-info.styles.scss
+++ b/src/components/square-info/square-info.styles.scss
@@ -6,4 +6,9 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	h3 {
+		align-items: center;
+		justify-content: center;
+		display: flex;
+	}
 }
