--- a/src/components/square-info/square-info.styles.scss
+++ b/src/components/square-info/square-info.styles.scss
@@ -10,5 +10,22 @@
 		align-items: center;
 		justify-content: center;
 		display: flex;
+		font-size: 35px;
+		//size for 1025px — 1200px: Desktops, large screens
+		@media only screen and (min-width: 1025px) and (max-width: 1200px) {
+			font-size: 30px;
+		}
+		//size for 769px — 1024px: Small screens, laptops
+		@media only screen and (min-width: 769px) and (max-width: 1024px) {
+			font-size: 25px;
+		}
+		//size for 481px — 768px: iPads, Tablets
+		@media only screen and (min-width: 481px) and (max-width: 768px) {
+			font-size: 15px;
+		}
+		//320px — 480px: Mobile devices
+		@media only screen and (min-width: 320px) and (max-width: 480px) {
+			font-size: 13px;
+		}
 	}
 }
