--- a/src/pages/solution/solution.styles.scss
+++ b/src/pages/solution/solution.styles.scss
@@ -2,17 +2,22 @@
 	display: flex;
 	width: 100%;
 	height: 100vh;
+	background-color: white;
 	.solution-text {
-		width: 60%;
+		flex: 1;
 		display: flex;
 		flex-direction: column;
-		padding-left: 5%;
-		padding-right: 2%;
+		padding-left: 10%;
+		padding-right: 10%;
 		.solution-description {
-			height: 30%;
+			height: 35%;
+			display: flex;
+			flex-direction: column;
+			padding-top: 30px;
 			h3 {
 				color: #2c336e;
 				font-size: 50px;
+				margin-bottom: 0px;
 			}
 			p {
 				color: #4f59b0;
@@ -20,15 +25,90 @@
 				font-size: 30px;
 			}
 		}
+		.solution-icons {
+			height: 35%;
+			background-color: #f9faff;
+			display: flex;
+			justify-content: center;
+			.group-icon {
+				display: flex;
+				flex-direction: column;
+				text-align: center;
+				justify-content: center;
+				align-items: center;
+				padding-left: 5%;
+				padding-right: 5%;
+				img {
+					width: 60px;
+					height: 60px;
+				}
+				h4 {
+					margin-top: 10px;
+					color: #2c336e;
+				}
+			}
+		}
+		.solution-iconsv2 {
+			height: 20%;
+			background-color: #4f58b0;
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+			img {
+				width: 60px;
+				padding-right: 15px;
+				padding-left: 15px;
+			}
+		}
+		.solution-icons-user {
+			height: 10%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			img {
+				width: 60px;
+			}
+		}
 	}
 	.systemic-solution {
-		width: 40%;
+		width: 35%;
 		display: flex;
 		flex-direction: column;
-		h3 {
-			color: #bac0f1;
-			font-size: 25px;
-			margin-top: 50px;
+		div {
+			&.title {
+				padding-top: 30px;
+				height: 20%;
+				h3 {
+					color: #bac0f1;
+					font-size: 30px;
+					margin-top: 50px;
+				}
+			}
+			&.bar-info {
+				height: 40%;
+				display: flex;
+				flex-direction: row;
+				.bar-title {
+					width: 60px;
+					background-color: #7c87ddff;
+					margin-top: 5%;
+					margin-bottom: 4%;
+					writing-mode: vertical-rl;
+					transform: rotate(180deg);
+					justify-content: center;
+					align-items: center;
+					display: flex;
+					h4 {
+						color: white;
+						margin: 0;
+						font-size: 30px;
+						text-align: -webkit-center;
+					}
+				}
+				.bar-list {
+					width: 90%;
+				}
+			}
 		}
 	}
 }
