--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -2,7 +2,8 @@
 	width: 100%;
 	height: 70px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: end;
+	align-items: center;
 	margin-bottom: 25px;
 	background-color: #4f5cab;
 	position: fixed;
@@ -17,9 +18,34 @@
 		cursor: pointer;
 		.option {
 			padding: 10px 15px;
+			text-decoration: none;
 			&:first-of-type {
 				flex: 1;
 			}
+
 		}
 	}
+}
+.header-navigation{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	width: 100%;
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		display: flex;
+		li {
+			padding: 0 0.5rem;
+		}
+	}
+	button {
+		margin-right: 0.5rem;
+	}
+}
+@media(max-width: 768px) {
+    .options-container  {
+		display: none !important;
+    }
 }
