--- a/src/components/better/first-sec-better/first-sec-better.styles.scss
+++ b/src/components/better/first-sec-better/first-sec-better.styles.scss
@@ -34,9 +34,16 @@
 			flex-wrap: wrap;
 			flex-wrap: wrap;
 			align-items: center;
+			justify-content: space-between;
+			padding: 5%;
 			.groupInfo {
-				width: 33.33%;
+				width: 500px;
+				height: 183px;
 				display: flex;
+				@media only screen and (max-width: 768px) {
+					width: 100%;
+					height: auto;
+				}
 				.cardImg {
 					width: 100px;
 					height: 100px;
