--- a/src/components/platform/first-sec-platform/first-sec-platform.styles.scss
+++ b/src/components/platform/first-sec-platform/first-sec-platform.styles.scss
@@ -15,6 +15,9 @@
 			h4 {
 				font-size: 50px;
 				color: #2c336e;
+				@media only screen and (max-width: 768px) {
+					font-size: 35px;
+				}
 			}
 		}
 		.icons {
@@ -31,6 +34,9 @@
 					writing-mode: vertical-rl;
 					transform: rotate(180deg);
 					margin: 0px;
+					@media only screen and (max-width: 768px) {
+						font-size: 23px;
+					}
 				}
 			}
 			.space-icons {
@@ -45,6 +51,9 @@
 						color: #2c336e;
 						margin: 0;
 						font-size: 30px;
+						@media only screen and (max-width: 768px) {
+							font-size: 15px;
+						}
 					}
 				}
 			}
@@ -52,12 +61,16 @@
 		.descriptions {
 			flex: 1;
 			display: flex;
-			margin-top: 10%;
-			justify-content: space-around;
+			padding: 10%;
+			justify-content: space-between;
+			flex-wrap: wrap;
 			.groupDescription {
 				h3 {
 					color: #2c336e;
 					font-size: 30px;
+					@media only screen and (max-width: 768px) {
+						font-size: 20px;
+					}
 				}
 				.activities {
 					color: #2c336e;
