--- a/src/components/problem/first-sec-problem/first-sec-problem.styles.scss
+++ b/src/components/problem/first-sec-problem/first-sec-problem.styles.scss
@@ -2,12 +2,12 @@
 	flex-direction: column;
 	display: flex;
 	background-color: #f9faff;
-	width: 100%;
+	min-width: 100%;
 	min-height: 100vh;
 	.sectionText {
-		height: 50%;
 		display: flex;
 		background-color: white;
+		padding-bottom: 25px;
 		.description {
 			width: 65%;
 			margin-left: 10%;
@@ -82,6 +82,8 @@
 		align-items: center;
 		color: #d8dcff;
 		text-align: center;
+		padding-top: 20px;
+		padding-bottom: 20px;
 		@media only screen and (max-width: 768px) {
 			height: auto;
 			padding-top: 5%;
