--- a/src/components/welcome/first-sec-welcome/first-sec-welcome.styles.scss
+++ b/src/components/welcome/first-sec-welcome/first-sec-welcome.styles.scss
@@ -2,16 +2,15 @@
 	display: flex;
 	background-color: #f9faff;
 	width: 100%;
-	height: 100vh;
+	min-height: 101vh;
 	.brandSection {
 		width: 50%;
 		display: flex;
 		flex-direction: column;
 		.brandText {
-			height: 40%;
 			display: flex;
 			flex-direction: row;
-			padding-top: 10%;
+			padding-top: 100px;
 			.title {
 				width: 75%;
 				padding-left: 5%;
